implementation of pandas tips for conditional changes, dropdown widgets in jupyter, and  for filtering data

--- a/jupyter_notebooks/interactive/interactive.ipynb
+++ b/jupyter_notebooks/interactive/interactive.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0838b2cdd5bb44a5b431e322661170ca",
+       "model_id": "32e7c9f88ffd44238449cb79a152276a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntText(value=5, description='X:'), FloatSlider(value=2.0, description='Y:', max=10.0), …"
+       "interactive(children=(IntText(value=5, description='X:'), IntSlider(value=2, description='Y:', max=10), Output…"
       ]
      },
      "metadata": {},
@@ -57,7 +57,7 @@
     "    print('Result: ',z)\n",
     "    \n",
     "\n",
-    "os = widgets.FloatSlider(\n",
+    "os = widgets.IntSlider(\n",
     "            min=0,\n",
     "            max=10,\n",
     "            value=2,\n",
@@ -75,32 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd5685725204427c8f0265372ced3804",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=2.0, description='w', max=10.0), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = widgets.FloatSlider(min=0, max=10, value = 2)\n",
+    "import time\n",
+    "x = widgets.FloatSlider(min=0, max=100, value = 0)\n",
     "\n",
-    "@widgets.interact(w= x)\n",
+    "@widgets.interact(w= x)    \n",
     "def update(w):\n",
     "    print(w)\n",
-    "    plt.plot([[0,0],[1,w]], linewidth=5)\n",
-    "    plt.show()"
+    "    plt.plot([[x.value,0],[10,x.value]], linewidth=5)\n",
+    "    plt.show()\n",
+    "\n",
+    "while True:\n",
+    "    time.sleep(0.25)\n",
+    "    x.value = x.value + 1\n",
+    "    if(x.value >= x.max):\n",
+    "        break\n",
+    "\n",
+    "print(\"Done!\")"
    ]
   }
  ],
